--- a/index.html
+++ b/index.html
@@ -6,91 +6,98 @@
   <title>图片压缩</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="renderer" content="webkit">
+  <style>
+    .compressed-images {
+      display: flex;
+      flex-wrap: wrap;
+      max-width: 100%;
+      overflow: auto;
+    }
+
+    .compressed-images img {
+      max-width: 200px;
+      margin: 10px;
+    }
+
+    .image-container {
+      text-align: center;
+      margin: 10px;
+    }
+  </style>
 </head>
 
 <body>
   <form>
-    <input type="file" accept="image/*" onchange="selectImage(event)">
+    <input type="file" accept="image/*" multiple onchange="selectImages(event)">
   </form>
-  <p>是否调整尺寸<input type="checkbox" checked onchange="customSize(event)"></p>
-  <p class='resize'>压缩后最大宽度: <input type="number" class="width" value="640"> px</p>
-  <p class='resize'>压缩后最大高度: <input type="number" class="height" value="360"> px</p>
   <p>
-    <input type="range" min="0" max="100" onchange="rangeChange(event)">
+    <input type="range" min="0" max="100" value="50" onchange="rangeChange(event)">
     <span class='range-value'>压缩质量: 50%</span>
   </p>
-  <div class='base64'>base64压缩结果,右键保存:</div>
+  <button onclick="downloadAll()">下载所有压缩后的图片</button>
+  <div class='compressed-images'></div>
 </body>
 
 <script>
-  // 是否调整尺寸
-  function customSize(event) {
-    document.querySelectorAll('.resize').forEach((item) => {
-      if (event.target.checked) {
-        item.style.display = 'block'
-      } else {
-        item.style.display = 'none'
-      }
-    })
-  }
+  let originalImages = [];
+
   // 拖动压缩范围滑块
   function rangeChange(event) {
-    document.querySelector('.range-value').innerHTML = '压缩质量: ' + event.target.value + '%'
+    document.querySelector('.range-value').innerHTML = '压缩质量: ' + event.target.value + '%';
+    compressAllImages();
   }
-  // 选择图片
-  function selectImage(event) {
-    // 移除上次生成的图片
-    if (document.querySelector('.base64').childNodes.length > 1) {
-      document.querySelector('.base64').removeChild(document.querySelector('img'))
-    }
-    // 读取文件
-    var file = event.target.files[0]
-    var fileReader = new FileReader()
-    fileReader.readAsDataURL(file)
-    fileReader.onload = (readerEvent) => {
-      // 创建图片
-      var image = new Image();
-      image.src = readerEvent.target.result;
-      image.onload = (imageEvent) => {
-        var w = image.naturalWidth
-        var h = image.naturalHeight
-        console.log('原始宽度', w);
-        console.log('原始高度', h);
-        // 是否调整尺寸
-        if (document.querySelector('input[type=checkbox]').checked) {
-          var maxWidth = document.querySelector('.width').value
-          var maxHeight = document.querySelector('.height').value
-          var resizeW
-          var resizeH
-          if (w > maxWidth || h > maxHeight) {
-            var ratio = Math.max(w / maxWidth, h / maxHeight);
-            resizeW = w / ratio;
-            resizeH = h / ratio;
-          } else {
-            resizeW = w;
-            resizeH = h;
-          }
-        } else {
-          var resizeW = w
-          var resizeH = h
-        }
-        // 生成canvas
-        var canvas = document.createElement("canvas");
-        canvas.width = resizeW;
-        canvas.height = resizeH;
-        var ctx = canvas.getContext('2d');
-        ctx.drawImage(image, 0, 0, resizeW, resizeH);
-        // 进行base64压缩
-        var compressLevel = document.querySelector('input[type=range]').value / 100
-        var base64 = canvas.toDataURL('image/jpeg', compressLevel);
-        console.log(base64)
-        var img = document.createElement("img");
-        img.src = base64
-        document.querySelector('.base64').appendChild(img)
-        // 重置表单,清楚选择结果,可以下次选择同一张图片
-        document.querySelector('form').reset()
-      }
-    }
+
+  // 选择多个图片
+  function selectImages(event) {
+    originalImages = [];
+    Array.from(event.target.files).forEach(file => {
+      const fileReader = new FileReader();
+      fileReader.readAsDataURL(file);
+      fileReader.onload = (readerEvent) => {
+        originalImages.push({ src: readerEvent.target.result, name: file.name });
+        compressAllImages();
+      };
+    });
+  }
+
+  // 压缩所有图片
+  function compressAllImages() {
+    document.querySelector('.compressed-images').innerHTML = '';
+    const compressLevel = document.querySelector('input[type=range]').value / 100;
+
+    originalImages.forEach(imageData => {
+      const image = new Image();
+      image.src = imageData.src;
+      image.onload = () => {
+        const canvas = document.createElement("canvas");
+        const ctx = canvas.getContext('2d');
+        canvas.width = image.naturalWidth;
+        canvas.height = image.naturalHeight;
+        ctx.drawImage(image, 0, 0);
+        const base64 = canvas.toDataURL('image/jpeg', compressLevel);
+        const img = document.createElement("img");
+        img.src = base64;
+        const container = document.createElement("div");
+        container.className = 'image-container';
+        container.appendChild(img);
+        const sizeText = document.createElement("p");
+        sizeText.innerText = `压缩后大小: ${Math.round(base64.length / 1024)} KB`;
+        container.appendChild(sizeText);
+        document.querySelector('.compressed-images').appendChild(container);
+      };
+    });
+  }
+
+  // 下载所有压缩后的图片
+  function downloadAll() {
+    document.querySelectorAll('.compressed-images img').forEach((img, index) => {
+      const link = document.createElement('a');
+      link.href = img.src;
+      link.download = originalImages[index].name;
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    });
   }
 </script>
 
